alignment issues

--- a/stylesheets/designmatters.css
+++ b/stylesheets/designmatters.css
@@ -67,7 +67,7 @@ hr{
 	width: 745px;
 	margin-left: 250px;
 	position: absolute;
-	top: 300px;
+	top: 255px;
   border: 2px solid rgba(21,101,192,0.5);
 }
 
@@ -80,17 +80,17 @@ header h1{
 	font-size: 100px;
 	display: inline-block;
 	position: absolute;
-	top: 100px;
+	top: 70px;
 }
 
 header h2{
 	font-family: helvetica, sans-serif;
-	font-size: 65px;
+	font-size: 70px;
 	font-weight: lighter;
   display: inline-block;
 	position: absolute;
 	margin-top: 25px;
-	top: 180px;
+	top: 150px;
 }
 
 nav ul li {
@@ -100,6 +100,7 @@ nav ul li {
 	font-family: helvetica, sans-serif;
 	font-size: 20px;
 	border-right: 2px solid white;
+
 }
 
 nav ul li a{
@@ -116,6 +117,11 @@ nav ul{
 	background-color: rgba(255,87,34,0.8);
 	padding: 10px;
 	margin-top: -20px;
+}
+
+nav{
+	margin-top: -55px;
+	margin-bottom: 30px;
 }
 
 article{
